# coding-challenge

./: .gitignore  .isort.cfg  README.md
.github/workflows/: cicd.yml
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0473a5e91523_db_v1.py  61c074f99078_introduce_deleted_at_for_soft_delete.py  bbec08251bf1_update_caretype_enum_for_consistent_.py  d4f778958b60_add_day_care_as_caretype.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/dependencies/: repositories.py
backend/app/api/v1/endpoints/: dummy_router.py  facilities.py  facility_matching.py  patients.py
backend/app/api/v1/schemas/: facility.py  facility_match.py  patient.py
backend/app/core/: config.py
backend/app/domain/models/: base.py  capacity_type.py  care_type.py  facility.py  facility_care_type.py  patient.py  utils.py  zip_code_range.py
backend/app/domain/repositories/: base.py  facility_repository.py  patient_repository.py
backend/app/infrastructure/database/: base.py  models.py  session.py
backend/app/infrastructure/repositories/: base.py  facility_repository.py  patient_repository.py
backend/app/use_cases/: match_facility.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_patients.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/scripts/: generate-api.js
frontend/src/api/: index.ts
frontend/src/api/core/: OpenAPI.ts
frontend/src/api/models/: CapacityType.ts  CareType.ts  Facility.ts  FacilityCreate.ts  FacilityMatchRequest.ts  FacilityMatchResponse.ts  FacilityResponse.ts  FacilityUpdate.ts  PatientCreate.ts  PatientResponse.ts  PatientUpdate.ts  ZipCodeRangeCreate.ts
frontend/src/api/services/: FacilitiesService.ts  FacilityMatchingService.ts  FacilityService.ts  PatientsService.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/admin/: FacilityForm.tsx  FacilityList.tsx
frontend/src/components/care-portal/: CareTypeStep.tsx  FormContext.tsx  FormStep.tsx  NameStep.tsx  PatientForm.tsx  ResultStep.tsx  ZipCodeStep.tsx
frontend/src/components/theme/: ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  input.tsx  radio-group.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/adapters/: facility-adapter.ts
infrastructure/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  package_lambda.py  pyproject.toml
(+2 files in other folders)
