[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = ["Berkay <theberkayugur@gmail.com>"]
readme = "README.md"
packages = [{include = "infrastructure"}]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pulumi = ">=3.0.0,<4.0.0"
pulumi-aws = ">=6.0.2,<7.0.0"
python = "^3.9"
